--- a/SchoolDiarySystem/Views/Class/Create.cshtml
+++ b/SchoolDiarySystem/Views/Class/Create.cshtml
@@ -34,7 +34,7 @@
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Class Number *</label>
-                                @Html.TextBoxFor(m => m.ClassNo, new { @class = "form-control", placeholder = "First name...", id = "firstname" })
+                                @Html.TextBoxFor(m => m.ClassNo, new { @class = "form-control", placeholder = "First name...", id = "firstname", @type = "number", @maxlength = "1" })
                                 @Html.ValidationMessageFor(m => m.ClassNo, "", new { @class = "text-danger" })
                             </div>
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
