--- a/SchoolDiarySystem/Views/Class/Update.cshtml
+++ b/SchoolDiarySystem/Views/Class/Update.cshtml
@@ -25,30 +25,30 @@
                 </div>
                 @using (Html.BeginForm("Update", "Class", FormMethod.Post))
                 {
-                    <form class="new-added-form">
-                        <div class="row">
-                            @Html.HiddenFor(m => m.ClassID)
-                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                            <div class="col-xl-4 col-lg-6 col-12 form-group">
-                                <label>Teacher *</label>
-                                @Html.DropDownListFor(m => m.TeacherID, Model.TeacherList, htmlAttributes: new { @class = "select2" })
-                                @Html.ValidationMessageFor(m => m.TeacherID, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-xl-4 col-lg-6 col-12 form-group">
-                                <label>Class Number *</label>
-                                @Html.TextBoxFor(m => m.ClassNo, new { @class = "form-control", placeholder = "Write class number...", id = "classNo", @readonly = "true", autocomplete = "off" })
-                                @Html.ValidationMessageFor(m => m.ClassNo)
-                            </div>
-                        <div class="col-xl-4 col-lg-6 col-12 form-group">
-                            <label>Room Type *</label>
-                            @Html.DropDownListFor(m => m.RoomID, Model.RoomList, htmlAttributes: new { @class = "select2" })
-                            @Html.ValidationMessageFor(m => m.RoomID, "", new { @class = "text-danger" })
-                        </div>
-                            <div class="col-12 form-group mg-t-8">
-                                <input type="submit" value="Update" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
-                            </div>
-                        </div>
-                    </form>
+            <form class="new-added-form">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="row">
+                    @Html.HiddenFor(m => m.ClassID)
+                    <div class="col-xl-4 col-lg-6 col-12 form-group">
+                        <label>Teacher *</label>
+                        @Html.DropDownListFor(m => m.TeacherID, Model.TeacherList, htmlAttributes: new { @class = "select2" })
+                        @Html.ValidationMessageFor(m => m.TeacherID, "", new { @class = "text-danger" })
+                    </div>
+                    @*<div class="col-xl-4 col-lg-6 col-12 form-group">
+                        <label>Class Number *</label>
+                        @Html.TextBoxFor(m => m.ClassNo, new { @class = "form-control", placeholder = "Write class number...", id = "classNo", @readonly = "true", autocomplete = "off" })
+                        @Html.ValidationMessageFor(m => m.ClassNo)
+                    </div>*@
+                    <div class="col-xl-4 col-lg-6 col-12 form-group">
+                        <label>Room Type *</label>
+                        @Html.DropDownListFor(m => m.RoomID, Model.RoomList, htmlAttributes: new { @class = "select2" })
+                        @Html.ValidationMessageFor(m => m.RoomID, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-12 form-group mg-t-8">
+                        <input type="submit" value="Update" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
+                    </div>
+                </div>
+            </form>
                 }
             </div>
         </div>
