--- a/SchoolDiarySystem/Views/Teacher/Update.cshtml
+++ b/SchoolDiarySystem/Views/Teacher/Update.cshtml
@@ -41,7 +41,7 @@
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Gender *</label>
                                 @Html.DropDownListFor(m => m.Gender, Model.Genders, new { @class = "select2" })
-                                @Html.ValidationMessageFor(m => m.Gender)@*, "", new { @class = "text-danger" }*@
+                                @Html.ValidationMessageFor(m => m.Gender, "", new { @class = "text-danger" })@*, "", new { @class = "text-danger" }*@
                             </div>
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Date Of Birth *</label>
