--- a/SchoolDiarySystem/Views/User/ChangePassword.cshtml
+++ b/SchoolDiarySystem/Views/User/ChangePassword.cshtml
@@ -28,13 +28,12 @@
             <form class="new-added-form">
                 @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
                 <div class="row">
+                    @*<div class="col-xl-4 col-lg-4 col-12 form-group">
+                        <label>Username: </label>
+                        @Html.Label("Username", Model.Username, new { @class = "text-dark-medium font-medium" })
+                    </div>*@
                     <div class="col-xl-4 col-lg-4 col-12 form-group">
                         @Html.HiddenFor(m => m.UserID)
-                        <label>Username *</label>
-                        @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Last name...", id = "lastname", disabled = "disabled", autocomplete = "off" })
-                        @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-12 form-group">
                         <label>Password *</label>
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Type Password", id = "password" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
