--- a/SchoolDiarySystem/Views/Teacher/Create.cshtml
+++ b/SchoolDiarySystem/Views/Teacher/Create.cshtml
@@ -25,54 +25,55 @@
                 </div>
                 @using (Html.BeginForm("Create", "Teacher", FormMethod.Post))
                 {
-                    <form class="new-added-form">
-                        <div class="row">
-                            <div class="col-xl-3 col-lg-6 col-12 form-group">
-                                <label>First Name *</label>
-                                @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First name...", id = "firstname", autocomplete = "off" })
-                                @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-xl-3 col-lg-6 col-12 form-group">
-                                <label>Last Name *</label>
-                                @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Last name...", id = "lastname", autocomplete = "off" })
-                                @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-xl-3 col-lg-6 col-12 form-group">
-                                <label>Gender *</label>
-                                @Html.DropDownListFor(m => m.Gender, Model.Genders, new { @class = "select2" })
-                                @Html.ValidationMessageFor(m => m.Gender)@*, "", new { @class = "text-danger" }*@
-                            </div>
-                            <div class="col-xl-3 col-lg-6 col-12 form-group">
-                                <label>Date Of Birth *</label>
-                                @Html.TextBoxFor(m => m.DayofBirth, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "dob", autocomplete = "off" })
-                                @Html.ValidationMessageFor(m => m.DayofBirth, "", new { @class = "text-danger" })
-                                <i class="far fa-calendar-alt"></i>
-                            </div>
-                            <div class="col-xl-3 col-lg-6 col-12 form-group">
-                                <label>City *</label>
-                                @Html.TextBoxFor(m => m.City, new { @class = "form-control", placeholder = "Write city...", id = "city", autocomplete = "off" })
-                                @Html.ValidationMessageFor(m => m.City, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-xl-3 col-lg-6 col-12 form-group">
-                                <label>Qualification *</label>
-                                @Html.TextBoxFor(m => m.Qualification, new { @class = "form-control", placeholder = "Write qualification...", id = "qualification", autocomplete = "off" })
-                                @Html.ValidationMessageFor(m => m.Qualification, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-xl-3 col-lg-6 col-12 form-group">
-                                <label>E-Mail *</label>
-                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "example@mail.com", id = "email", autocomplete = "off" })
-                                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-xl-3 col-lg-6 col-12 form-group">
-                                <label>Phone Number *</label>
-                                @Html.TextBoxFor(m => m.PhoneNo, new { @class = "form-control", placeholder = "+38349700700", id = "phoneno", autocomplete = "off" })
-                                @Html.ValidationMessageFor(m => m.PhoneNo, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-12 form-group mg-t-8">
-                                <input type="submit" value="Create" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
-                            </div>
-                        </div>
-                    </form>
+            <form class="new-added-form">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="row">
+                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                        <label>First Name *</label>
+                        @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First name...", id = "firstname", autocomplete = "off" })
+                        @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                        <label>Last Name *</label>
+                        @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Last name...", id = "lastname", autocomplete = "off" })
+                        @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                        <label>Gender *</label>
+                        @Html.DropDownListFor(m => m.Gender, Model.Genders, new { @class = "select2" })
+                        @Html.ValidationMessageFor(m => m.Gender, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                        <label>Date Of Birth *</label>
+                        @Html.TextBoxFor(m => m.DayofBirth, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "dob", autocomplete = "off" })
+                        @Html.ValidationMessageFor(m => m.DayofBirth, "", new { @class = "text-danger" })
+                        <i class="far fa-calendar-alt"></i>
+                    </div>
+                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                        <label>City *</label>
+                        @Html.TextBoxFor(m => m.City, new { @class = "form-control", placeholder = "Write city...", id = "city", autocomplete = "off" })
+                        @Html.ValidationMessageFor(m => m.City, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                        <label>Qualification *</label>
+                        @Html.TextBoxFor(m => m.Qualification, new { @class = "form-control", placeholder = "Write qualification...", id = "qualification", autocomplete = "off" })
+                        @Html.ValidationMessageFor(m => m.Qualification, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                        <label>E-Mail *</label>
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "example@mail.com", id = "email", autocomplete = "off" })
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-xl-3 col-lg-6 col-12 form-group">
+                        <label>Phone Number *</label>
+                        @Html.TextBoxFor(m => m.PhoneNo, new { @class = "form-control", placeholder = "+38349700700", id = "phoneno", autocomplete = "off" })
+                        @Html.ValidationMessageFor(m => m.PhoneNo, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-12 form-group mg-t-8">
+                        <input type="submit" value="Create" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
+                    </div>
+                </div>
+            </form>
                 }
             </div>
         </div>
