--- a/SchoolDiarySystem/Views/User/CreateParent.cshtml
+++ b/SchoolDiarySystem/Views/User/CreateParent.cshtml
@@ -25,39 +25,40 @@
                 </div>
                 @using (Html.BeginForm("CreateParent", "User", FormMethod.Post))
                 {
-                    <form class="new-added-form">
-                        <div class="row">
-                            <div class="col-xl-6 col-lg-6 col-12 form-group">
-                                <label>Parent *</label>
-                                @Html.DropDownList("ParentID", null, new { @class = "select2" })
-                                @Html.ValidationMessageFor(m => m.ParentID, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-xl-6 col-lg-4 col-12 form-group">
-                                <label>Expire Date *</label>
-                                @Html.TextBoxFor(m => m.ExpiresDate, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "expire", autocomplete = "off" })
-                                @Html.ValidationMessageFor(m => m.ExpiresDate, "", new { @class = "text-danger" })
-                                <i class="far fa-calendar-alt"></i>
-                            </div>
-                            <div class="col-xl-4 col-lg-4 col-12 form-group">
-                                <label>Username *</label>
-                                @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Last name...", id = "username", autocomplete = "off" })
-                                @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-xl-4 col-lg-4 col-12 form-group">
-                                <label>Password *</label>
-                                @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Type Password", id = "password" })
-                                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-xl-4 col-lg-4 col-12 form-group">
-                                <label>Confirm Password </label>
-                                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password", id = "confirmPass" })
-                                @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="col-12 form-group mg-t-8">
-                                <input type="submit" value="Create" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
-                            </div>
-                        </div>
-                    </form>
+            <form class="new-added-form">
+                @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
+                <div class="row">
+                    <div class="col-xl-6 col-lg-6 col-12 form-group">
+                        <label>Parent *</label>
+                        @Html.DropDownList("ParentID", null, new { @class = "select2" })
+                        @Html.ValidationMessageFor(m => m.ParentID, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-xl-6 col-lg-4 col-12 form-group">
+                        <label>Expire Date *</label>
+                        @Html.TextBoxFor(m => m.ExpiresDate, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "expire", autocomplete = "off" })
+                        @Html.ValidationMessageFor(m => m.ExpiresDate, "", new { @class = "text-danger" })
+                        <i class="far fa-calendar-alt"></i>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-12 form-group">
+                        <label>Username *</label>
+                        @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Last name...", id = "username", autocomplete = "off" })
+                        @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-12 form-group">
+                        <label>Password *</label>
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Type Password", id = "password" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-12 form-group">
+                        <label>Confirm Password </label>
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password", id = "confirmPass" })
+                        @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="col-12 form-group mg-t-8">
+                        <input type="submit" value="Create" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
+                    </div>
+                </div>
+            </form>
                 }
             </div>
         </div>
